# incrify

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
examples/: 01_basic_usage.ps1  02_daily_backup.ps1  03_backup_with_rotation.ps1  demo_docker.ps1  demo_docker.sh
include/cli/: CLI.h  ICommand.h
include/core/: BackupManager.h  CRC32Strategy.h  FileIndexer.h  IHashStrategy.h  IProgressObserver.h  StorageEngine.h
include/models/: FileChange.h  FileIndex.h  Snapshot.h
src/: main.cpp
src/cli/: CLI.cpp
src/core/: BackupManager.cpp  CRC32Strategy.cpp  FileIndexer.cpp  StorageEngine.cpp
src/models/: FileIndex.cpp
tests/: CMakeLists.txt  test_backup_manager.cpp  test_crc32_strategy.cpp  test_file_index.cpp  test_file_indexer.cpp  test_storage_engine.cpp
